--- a/sentiment-web/src/main/resources/cache-config.properties
+++ b/sentiment-web/src/main/resources/cache-config.properties
@@ -1,12 +1,21 @@
 
-# Mater-Slave (For Replicating Record-Key)
-redis.rp.master=192.168.32.19
-redis.rp.slave=192.168.32.20
-redis.rp.port=16379
+##### Mater-Slave (For Replicating Record-Key) #####
+# Product
+#redis.rp.master=192.168.32.19
+#redis.rp.slave=192.168.32.20
+# Testing
+redis.rp.master=192.168.31.20
+redis.rp.slave=192.168.31.21
 
-# Message-Queue (for Index-Data and Firsttime Caching)
-redis.mq.server=192.168.32.18
+##### Message-Queue (for Index-Data and Firsttime Caching) #####
+# Product
+#redis.mq.server=192.168.32.18
+# Testing
+redis.mq.server=192.168.31.12
+
+##### Port #####
+redis.rp.port=16379
 redis.mq.port=6379
 
-# Password
+##### Password #####
 redis.password=zxsoft
