--- a/sentiment-spring/pom.xml
+++ b/sentiment-spring/pom.xml
@@ -83,6 +83,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
 			<groupId>zx.soft</groupId>
 			<artifactId>redis-client</artifactId>
 			<version>1.2.0</version>
