修改缓存架构

--- a/sentiment-web/src/main/resources/cache-config.properties
+++ b/sentiment-web/src/main/resources/cache-config.properties
@@ -1,5 +1,5 @@
 
-##### Mater-Slave (For Replicating Record-Key) #####
+##### Mater-Slave (For Replicating Record-Key,Index-Data Caching) #####
 # Product
 redis.rp.master=192.168.32.19
 redis.rp.slave=192.168.32.20
@@ -7,15 +7,15 @@ redis.rp.slave=192.168.32.20
 #redis.rp.master=192.168.31.20
 #redis.rp.slave=192.168.31.21
 
-##### Message-Queue (for Index-Data and Firsttime Caching) #####
+##### Message-Queue (For Firsttime Caching) #####
 # Product
-redis.mq.server=192.168.32.18
+redis.ft.server=192.168.32.18
 # Testing
-#redis.mq.server=192.168.31.12
+#redis.ft.server=192.168.31.XX
 
 ##### Port #####
 redis.rp.port=16379
-redis.mq.port=6379
+redis.ft.port=16379
 
 ##### Password #####
 redis.password=zxsoft
