--- a/sentiment-solr/src/main/resources/cache-config.properties
+++ b/sentiment-solr/src/main/resources/cache-config.properties
@@ -1,17 +1,11 @@
 
-##### Mater-Slave (For Replicating Record-Key) #####
+##### Mater-Slave (For Replicating Record-Key,Index-Data Caching) #####
 # Product
 redis.rp.master=192.168.32.19
 redis.rp.slave=192.168.32.20
 # Testing
 #redis.rp.master=192.168.31.20
 #redis.rp.slave=192.168.31.21
-
-##### Message-Queue (For Index-Data Caching) #####
-# Product
-redis.mq.server=192.168.32.18
-# Testing
-#redis.mq.server=192.168.31.12
 
 ##### Message-Queue (For Firsttime Caching) #####
 # Product
@@ -21,7 +15,6 @@ redis.ft.server=192.168.32.18
 
 ##### Port #####
 redis.rp.port=16379
-redis.mq.port=6379
 redis.ft.port=16379
 
 ##### Password #####
