--- a/sentiment-solr/pom.xml
+++ b/sentiment-solr/pom.xml
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.13</version><!--$NO-MVN-MAN-VER$-->
+			<version>1.9.13</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -94,6 +94,18 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<!--  
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>zx.soft.sent.solr.driver.SentSolrDriver</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				-->
 				<configuration>
 					<descriptors>
 						<descriptor>src/main/assembly/distribution.xml</descriptor>
@@ -109,12 +121,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <configuration> 
-				<archive> <manifest> <mainClass>zx.soft.sent.solr.driver.SentSolrDriver</mainClass> 
-				</manifest> </archive> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
-				</descriptorRefs> </configuration> <executions> <execution> <id>make-assembly</id> 
-				<phase>package</phase> <goals> <goal>single</goal> </goals> </execution> 
-				</executions> </plugin> -->
 		</plugins>
 
 		<finalName>${project.artifactId}-${project.version}</finalName>
