--- a/sentiment-solr/pom.xml
+++ b/sentiment-solr/pom.xml
@@ -94,18 +94,9 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<!--  
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>zx.soft.sent.solr.driver.SentSolrDriver</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-				-->
+				<!-- <configuration> <archive> <manifest> <mainClass>zx.soft.sent.solr.driver.SentSolrDriver</mainClass> 
+					</manifest> </archive> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
+					</descriptorRefs> </configuration> -->
 				<configuration>
 					<descriptors>
 						<descriptor>src/main/assembly/distribution.xml</descriptor>
