--- a/sentiment-solr/src/main/resources/cache-config.properties
+++ b/sentiment-solr/src/main/resources/cache-config.properties
@@ -7,7 +7,13 @@ redis.rp.slave=192.168.32.20
 #redis.rp.master=192.168.31.20
 #redis.rp.slave=192.168.31.21
 
-##### Message-Queue (For Firsttime Caching) #####
+##### Message-Queue (For Index-Data Caching) #####
+# Product
+redis.mq.server=192.168.32.20
+# Testing
+#redis.mq.server=192.168.31.XX
+
+##### Expired-Queue (For Firsttime Caching) #####
 # Product
 redis.ft.server=192.168.32.18
 # Testing
@@ -15,7 +21,8 @@ redis.ft.server=192.168.32.18
 
 ##### Port #####
 redis.rp.port=16379
-redis.ft.port=16379
+redis.mq.port=6379
+redis.ft.port=6379
 
 ##### Password #####
 redis.password=zxsoft
