--- a/sentiment-spider/src/main/resources/cache-config.properties
+++ b/sentiment-spider/src/main/resources/cache-config.properties
@@ -1,12 +1,28 @@
 
-# Mater-Slave (For Replicating Record-Key)
+##### Mater-Slave (For Replicating Record-Key,Index-Data Caching) #####
+# Product
 redis.rp.master=192.168.32.19
 redis.rp.slave=192.168.32.20
+# Testing
+#redis.rp.master=192.168.31.20
+#redis.rp.slave=192.168.31.21
+
+##### Message-Queue (For Index-Data Caching) #####
+# Product
+redis.mq.server=192.168.32.20
+# Testing
+#redis.mq.server=192.168.31.XX
+
+##### Expired-Queue (For Firsttime Caching) #####
+# Product
+redis.ft.server=192.168.32.18
+# Testing
+#redis.ft.server=192.168.31.XX
+
+##### Port #####
 redis.rp.port=16379
-
-# Message-Queue (for Index-Data and Firsttime Caching)
-redis.mq.server=192.168.32.18
 redis.mq.port=6379
+redis.ft.port=6379
 
-# Password
+##### Password #####
 redis.password=zxsoft
