--- a/sentiment-spider/pom.xml
+++ b/sentiment-spider/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>redis-client</artifactId>
 			<version>1.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>zx.soft</groupId>
+			<artifactId>common-utils</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 		<!-- XML解析工具 -->
 		<dependency>
 			<groupId>dom4j</groupId>
@@ -39,7 +44,16 @@
 		<dependency>
 			<groupId>zx.soft</groupId>
 			<artifactId>weibo-core</artifactId>
-			<version>1.2.0</version>
+			<version>1.3.2</version>
+		</dependency>
+		<!-- Json包 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 		</dependency>
 		<!-- 日志包 -->
 		<dependency>
@@ -74,6 +88,7 @@
 					<excludes>
 						<exclude>cache-config.properties</exclude>
 						<exclude>super.properties</exclude>
+						<exclude>sina-api.properties</exclude>
 						<exclude>logback.xml</exclude>
 					</excludes>
 				</configuration>
