--- a/sentiment-spider/src/main/resources/sina-api.properties
+++ b/sentiment-spider/src/main/resources/sina-api.properties
@@ -1,5 +1,6 @@
 
 ## IP
+# api.weibo.com:80
 # 180.149.135.176
 # 180.149.135.230
-sina.api.proxy.ip=api.weibo.com:80
+sina.api.proxy.ip=180.149.135.176:80
